# Programacion-Paralela

./: Path.txt  Tarea_MPI_Byron_Flores.rar  Tarea_MPI_Colectiva_Byron_Flores.rar  fractal_simd.h  main.cpp  palette.cpp
01.fractal-julia/: CMakeLists.txt  fractal_openmp.cpp  fractal_openmp.h  fractal_serial.cpp  fractal_serial.h  fractal_simd.cpp  main.cpp
02.fractal-java/: build.gradle.kts
02.fractal-java/src/main/java/com/programacion/paralela/: FPSCounter.java  FractalCpu.java  FractalDll.java  FractalMain.java  FractalParam.java  FractalSimd.java  FractalThreads.java
02.fractal-java/src/main/resources/: fractal_openmp.cpp
03.fractal-dll/: CMakeLists.txt  fractal_simd.cpp
04.ejemplo-openmp/: CMakeLists.txt  main.cpp
05.ejemplo-mpi/: main.cpp  matrices_mult.cpp  matrices_mult_colectiva.cpp
06.fractal-mpi/: CMakeLists.txt  fractal_mpi.cpp  fractal_mpi.h  main.cpp
07.fractal-cuda/: CMakeLists.txt  kernel.cu  main.cpp
08.fractal-cuda/: CMakeLists.txt  kernel.cu  main.cpp
Ejemplo01/: CMakeLists.txt  main.cpp
Ejemplo02/: CMakeLists.txt  main.cpp
Examen/: CMakeLists.txt  blur_openmp.cpp  blur_openmp.h  kernel.cu  main.cpp
Fractal_Newton_Cuda/: CMakeLists.txt  kernel.cu  main.cpp
Fractal_Newton_OpenMP/: CMakeLists.txt  main.cpp  newton_openmp.cpp  newton_openmp.h  newton_serial.cpp  newton_serial.h  palette.cpp
Fractal_Newton_SIMD/: CMakeLists.txt  arial_ttf.h  main.cpp  newton_serial.cpp  newton_simd.cpp  newton_simd.h
Tarea/: CMakeLists.txt  Tarea_Byron_Flores.rar  main.cpp
Tarea_MPI_Byron_Flores/: matrices_mult.cpp
Tarea_MPI_Colectiva_Byron_Flores/: CMakeLists.txt  matrices_mult_colectiva.cpp
TrabajoClase/: CMakeLists.txt  main.cpp
prueba01_Flores_Armijo_Byron/: CMakeLists.txt  draw_text.cpp  main.cpp  newton_mpi.cpp  newton_mpi.h
prueba02_Flores_Armijo_Byron/: CMakeLists.txt  burning_ship_mpi.cpp  burning_ship_mpi.h  draw_text.h  main.cpp  palette.cpp
